fix/user creation date on login/current+docs fixes
