# controllers/users/current.js
@@ -1,11 +1,12 @@
 const { ctrlWrapper } = require("../../helpers");
 
 const current = async (req, res) => {
-  const { email, name, avatarURL } = req.user;
+  const { email, name, avatarURL, createdAt } = req.user;
   res.json({
     name,
     email,
     avatarURL,
+    createdAt,
   });
 };
 
